--- a/01_CSR_SSR/이소민.md
+++ b/01_CSR_SSR/이소민.md
@@ -83,7 +83,7 @@ SPA(Single Page Application)를 구현하게 된것이다. 이 때 SPA를 구현
 
 # 3. SSG (Static Site Generation)
 모든 유저에게 항상 동일한 화면이 보이기 때문에 매번 동적으로 생성할 필요가 없을 때 적합한 방식이다.<br> 
-리액트는 CSR에 특화된 라이브러리지만 Gatsby와 함께 사용하면 **리액트로 만든 웹어플리케이션을 정적으로 웹페이지를 미리 생성해두어 서버에 배포**해 놓을 수 있다.<br>이 때 이렇게 만들어둔 웹사이트는 모두 정적인 것은 아니다. 데이터를 서버에서 받아오거나 동적으로 처리해야하는 로직이 있다면 JavaScript 파일을 함께 가지고 있을 수 있기 때문에 동적인 요소도 추가할 수 있다.
+리액트는 CSR에 특화된 라이브러리지만 Gatsby와 함께 사용하면 **리액트로 만든 웹어플리케이션을 정적으로 웹페이지를 미리 생성해두어 서버에 배포**해 놓을 수 있다. 이 때 이렇게 만들어둔 웹사이트는 모두 정적인 것은 아니다. 데이터를 서버에서 받아오거나 동적으로 처리해야하는 로직이 있다면 JavaScript 파일을 함께 가지고 있을 수 있기 때문에 동적인 요소도 추가할 수 있다.
 
 #### 단점 
 - 수정하거나 웹사이트에 변화가 있으면 매번 다시 빌드해줘야하기 때문에<br>자주 업데이트 되는 웹사이트인 경우 좋지 못하다.
@@ -101,14 +101,14 @@ SPA(Single Page Application)를 구현하게 된것이다. 이 때 SPA를 구현
 
 ### 2. 프레임 워크 사용하는 방법
 - Next.js (SSR, SSG)<br>
-    - CSR과 SSR을 잘 섞어 강력하고 유연하게, 목적에 맞게 사용할 수 있도록 지원.
+    - CSR과 SSR을 잘 섞어 강력하고 유연하게, 목적에 맞게 사용할 수 있도록 지원한다.
     - 페이지 성격별로 SSR을 사용할 것인지 SSG를 사용할 것인지 미리 정해둘 수 있다.<br>
     (업데이트가 자주 일어나는 렌더링에 적합하다.)
 - Gatsby (SSG) <br>
     - SSG에 최적화된 리액트 기반 정적 페이지 생성 프레임 워크.
     - 서버에서 웹사이트를 빌드할 때 다 만들어 두고 사용자가 요청하면 준비한 걸 바로 보여준다. 
     - SSG에 최적화 되어 있긴 하지만 CSR, SSR, lazy loading 등도 지원하고 다양한 플러그인 제공한다.
-    - 빌드 시점에 static HTML들을 만들어주기 때문에 페이지가 적고 작은 서비스에 적합한 수단.
+    - 빌드 시점에 static HTML들을 만들어주기 때문에 페이지가 적고 작은 서비스에 적합한 수단이다.
 - 앵귤러 유니버셜 (앵귤러 프레임워크)
     - 앵귤러에서 SSR 가능하게 해주는 프레임워크.
     - 현재는 앵귤러 자체에 포함되어 있기 때문에 더이상 프레임워크로 보지 않는다.
