--- a/02_Prototype/이소민.md
+++ b/02_Prototype/이소민.md
@@ -1,5 +1,8 @@
 ## 1. 자바스크립트의 프로토타입
-자바스크립트는 프로토타입을 기반으로 상속을 구현하여 불필요한 중복을 제거한다. 
+**프로토타입은 객체들이 공통으로 사용하는 속성값 !** <br/>
+생성자를 통해 객체를 생성할 때마다 같은 동작을 하는 중복적인 메소드가 메모리에 계속 생기면 메모리 낭비가 발생하고 성능 저하로 이어진다. 때문에 프로토타입을 통해 객체들이 공통적으로 사용하는 속성값을 정의해 객체를 생성할 때마다 같은 속성 값을 만드는 과정을 생략하여 메모리를 효율적으로 사용할 수 있다.
+
+특히 프로토타입은 객체를 정의하는 시점이 아닌, 자신이 필요한 시점에서 정의 할 수 있기 때문에 메모리상의 이점이 존재한다. 또한 프로토타입은 생성된 모든 객체가 공통으로 사용할 수 있고 재정의가 가능하기 떄문에 커스터마이징이 가능하다.
 
 <br/>
 
@@ -35,7 +38,7 @@ const circle2 = new Circle(2);
 console.log(circle1.getArea === circle2.getArea) //true
 ```
 
-
+<br/>
 
 ## 2. `__proto__` 접근자 프로퍼티
 어떤 객체가 자체적으로 가지고 있지 않은 값을 사용하려고 할때 <br/>`__proto__` 접근자 프로퍼티를 통해 자신의 프로토타입에 접근하여 값 혹은 메서드를 찾아낸다. 
@@ -53,18 +56,12 @@ Array.prototype.show = function(){
 }
 arr.show() // wow this is real !
 
-//프로토타입은 전역으로 영향을 미치기 때문에 
-//프로토타입을 조작하면 기존 코드와 충돌이 날 가능성이 크기 때문에 
+//프로토타입은 전역으로 영향을 미치기 때문에 조작할 경우 기존코드와 충돌 날 가능성이 크다.
 //네이티브 프로토타입에 내장 메서드를 추가하는 방법은 좋지 않다.
 
 ```
+<br/>
 
-
-## 3. 프로토타입은 왜 필요할까 
-**프로토타입은 객체들이 공통으로 사용하는 속성값 !** <br/>
-생성자 안에서 메소드가 갖는 단점이 존재한다. 생성자를 통해 객체를 생성할 때마다 같은 동작을 하는 중복적인 메소드가 메모리에 계속 생기면 메모리 낭비가 발생하고 성능 저하로 이어진다. 때문에 프로토타입을 통해 객체들이 공통적으로 사용하는 속성값을 정의해 객체를 생성할 때마다 같은 속성 값을 만드는 과정을 생략하여 메모리를 효율적으로 사용할 수 있다.
-
-특히 프로토타입은 객체를 정의하는 시점이 아닌, 자신이 필요한 시점에서 정의 할 수 있기 때문에 메모리상의 이점이 존재한다. 또한 프로토타입은 생성된 모든 객체가 공통으로 사용할 수 있고 재정의가 가능하기 떄문에 커스터마이징이 가능하다.
 
 ```js
 function Person(name, first, second){
