--- a/02_Prototype/이혜원.md
+++ b/02_Prototype/이혜원.md
@@ -1,4 +1,4 @@
-# 프로토타입 (Protoype)
+# 프로토타입 (Prototype)
 - 자바스크립트에서 다른 언어의 `class` 대신 사용하기 위해 만들어진 개념
 - 비슷한 객체의 공통적인 속성/메서드를 프로토타입을 이용하여 하나로 묶고 그 프로토타입을 **상속**하는 형태로 구현
 - 프로토타입을 이용하여 생성된 객체는 따로 선언하지 않아도 프로토타입의 속성/메서드에 접근 및 호출할 수 있음
@@ -7,8 +7,19 @@
 - 생성자 (`constructor`) 속성은 프로토타입의 **생성자 함수**를 가리킴
 - 프로토타입 링크 (`__proto__`) 를 이용하여 프로토타입에 접근할 수 있으나 **표준이 아님** (많이 사용되어서 사실상 표준화된 경우)
 - ES5부터 추가된 `Object.create(프로토타입 객체 이름)` 메서드로 프로토타입을 지정하여 객체를 생성할 수 있음
-- ES6부터 추가된 `Object.getPrototypeOf(객체 이름), Object.setPrototypeOf(객체 이름)` 메서드로 프로토타입에 접근 가능
+- ES6부터 추가된 `Object.getPrototypeOf(객체 이름), Object.setPrototypeOf(객체 이름, 프로토타입 객체 이름)` 메서드로 프로토타입에 접근 가능
 - 프로토타입을 이용하여 생성된 객체에서 메서드를 호출한 경우, `this`는 해당 객체를 가리킴
+
+```javascript
+function Person() { ... }
+
+const Person1 = Object.create(Person); // new로 생성 후 prototype을 지정해주는 과정을 하나로 합친 것
+Object.getPrototypeOf(Person1);
+
+const Person2 = new Object();
+Object.setPrototypeOf(Person2, Person);
+Object.getPrototypeOf(Person2);
+```
 
 ## 함수에서의 프로토타입
 - 함수에서는 함수 객체의 프로토타입인 `Function.prototype` 을 가리키는 `__proto__` 외에도 **함수를 가진 객체의 프로토타입**을 가리키는 `prototype` 속성이 존재
@@ -18,7 +29,17 @@
 - `Array`, `Date`, `String` 등 자바스크립트에 내장되어 있는 객체의 프로토타입
 - 모든 내장 객체의 프로토타입인 `Object.prototype`은 `null`
 - 내장 객체 프로토타입의 속성/메서드도 추가 및 수정 가능하지만, 코드 전체에 영향이 갈 수 있으므로 **폴리필** 용도 외에는 사용하지 말아야 함
-- 원시 타입에게 메서드를 제공하는 **임시 래퍼 객체** 때문에, `null`과 `undefined`를 제외한 원시 타입에서도 추가 또는 수정한 속성/메서드를 사용할 수 있음
+- 내장 객체가 원시 타입에게 메서드를 제공할 때 사용되는 **임시 래퍼 객체** 때문에, `null`과 `undefined`를 제외한 원시 타입에서도 추가 또는 수정한 속성/메서드를 사용할 수 있음
+```javascript
+String.prototype.concatWord = function (word) {
+    return `${this} ${word}`;
+}
+
+// 임시 래퍼 객체 때문에 원시 타입 sting에서 내장 객체 String의 프로토타입 메서드를 사용할 수 있음
+const str = "hello";
+str.concatWord("world");
+"hi".concatWord("everyone");
+```
 
 ## 프로토타입 체이닝 (Prototype Chaining)
 - 속성/메서드가 호출된 객체에 해당 속성/메서드가 없다면 **프로토타입 링크**를 따라 **상위 프로토타입의 속성/메서드를 참조**하는 것
