--- a/04_Browser_Render/이혜원.md
+++ b/04_Browser_Render/이혜원.md
@@ -10,7 +10,7 @@
 - `<style>` 태그, HTML의 인라인 스타일 등 다양한 방식의 스타일을 모두 읽고 CSSOM 생성
 - 스타일은 아래의 것으로 덮어씌워짐 (Cascading)
 ## 3. 렌더 트리 (Render Tree) 생성
-- DOM 트리와 CSSON 트리를 결합하여 **렌더링**될 요소들만 렌더 트리에 추가
+- DOM 트리와 CSSOM 트리를 결합하여 **렌더링**될 요소들만 렌더 트리에 추가
 - DOM 트리에서 `<meta>`, `<title>` 등 화면에 그려지지 않는 노드는 렌더 트리에 포함되지 않음
 - CSSOM 트리에서 `display: none` 이 적용되어 화면에 그려지지 않는 노드는 렌더 트리에 포함되지 않음
 - CSSOM 트리에서 `visuality: hidden` 이 적용된 노드는 보이지 않지만 자리를 차지하므로 렌더 트리에 포함됨
@@ -24,7 +24,8 @@
     - 뷰포트의 크기를 변경하는 경우
     - DOM 노드가 추가/제거된 경우
     - `position`, `margin`, `padding`, `width`/`height` 등 리플로우가 일어나는 요소를 변경하는 경우
-    - 폰트/이미지 크기를 재설정한 경우
+    - 폰트 크기를 변경한 경우
+    - 이미지 크기를 변경한 경우
 ## 5. 페인트 (Paint)
 - 계산된 위치와 크기를 바탕으로 DOM 노드를 픽셀 단위로 **화면에 그리는 과정**
 - 처음 페인트되고 나서 노드를 다시 그려야 할 경우 **리페인트** 발생
