--- a/04_Browser_Render/이현섭.md
+++ b/04_Browser_Render/이현섭.md
@@ -1,1 +1,41 @@
 # 브라우저 렌더링 원리
+
+브라우저 렌더링 과정은 크게 4가지 단계로 이루어짐.
+
+## 1. HTML은 DOM, CSS CSSOM으로 만들어짐.
+
+## 2. DOM 트리와 CSSOM 트리가 만들어졌으면 그 다음은 이 둘을 이용하여 Render Tree 생성.
+
+렌더트리는 화면에 표시되어야 할 모든 노드의 컨텐츠, 스타일 정보를 포함하고 있는 트리. 
+
+렌더 트리가 만들어지는 과정 : document 객체부터 각 노드를 순회하면서 각각의 맞는 CSSOM을 찾아서 규칙을 적용. 그러면서 렌더와 관련된 요소는 렌더 트리에 포함시키게 됨. 이 때, meta 태그나 display : none 속성을 가진 요소들은 렌더와 관계가 없기 때문에 렌더 트리에 포함 X
+
+## 3. 레이아웃 과정.
+
+리플로우 라고도 함. 뷰포트 내에서 요소들의 정확한 위치와 크기를 게산하는 과정.
+
+박스 모델에 따라서 텍스트나 요소의 박스가 화면에서 차지하는 영역이나 여백, 그리고 이외의 스타일 속성이 계산됨. 이 때, CSS에서 %나 em 같은 상대적인 단위를 사용했을 때는 뷰포트에 맞춰서 픽셀단위로 변화됨.
+
+레이아웃 과정에서 렌더링 엔진이 각 요소들이 어떻게 생겼고 이를 어떻게 보여줄지 알게 됨.
+
+## 4. 페인트 과정.
+
+화면에 실제 픽셀로 그려지도록 변환하는 과정.
+
+이 과정에서 렌더트리에 포함된 요소들이나 텍스트, 이미지들이 실제 픽셀로 그려짐.
+
+사용자의 동작으로 자바스크립트가 실행되어서 CSS가 변경되거나 애니메이션 재생이 일어난다면 ?
+
+=> 3가지 동작으로 발생.
+
+### 1. 다시 Layout이 발생하는 경우.
+
+요소의 크기나 위치가 바뀔 때, 혹은 브라우저 창의 크기가 바뀌었을 때 다시 발생.
+
+이 때, 레이아웃 수치를 다시 계산해서 배치를 해야 되기 때문에 레이아웃 과정에 다시 발생하고 이에 맞춰 페인트하고 레이어를 합성하는 과정까지 거쳐야 함.
+
+### 2. 페인트부터 다시 발생 하는 경우.
+
+주로 배경이미지나 텍스트 색상, 그림자 등 레이아웃의 수치를 변화시키지 않는 스타일의 변경이 일어났을 때 발생.
+
+### 3. 레이어의 합성만 다시 발생하는 경우.
