수정 : 6주차 이혜원

--- a/06_React_LifeCycle/이혜원.md
+++ b/06_React_LifeCycle/이혜원.md
@@ -1,8 +1,30 @@
 # 리액트 컴포넌트의 생명 주기 (Life Cycle)
-[![image](https://user-images.githubusercontent.com/79434205/227422404-e7532aa1-f0e5-49d4-b78e-b1831ed82a69.png)](https://projects.wojtekmaj.pl/react-lifecycle-methods-diagram/)
-(클래스 컴포넌트 기준, 이미지 클릭 시 다이어그램 사이트로 이동)
-[![image](https://user-images.githubusercontent.com/79434205/227490335-fe0bdba5-8714-4383-beec-e141ea7ede64.png)](https://wavez.github.io/react-hooks-lifecycle/)
-(함수형 컴포넌트 기준, 이미지 클릭 시 다이어그램 사이트로 이동)
+<table align="center">
+    <thead>
+        <tr>
+            <td align="center">
+                <a href="https://wavez.github.io/react-hooks-lifecycle/">클래스 컴포넌트 (클릭 시 사이트로 이동)</a>
+            </td>
+            <td align="center">
+                <a href="https://wavez.github.io/react-hooks-lifecycle/">함수형 컴포넌트 (클릭 시 사이트로 이동)</a>
+            </td>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td align="center">
+                <a href="https://projects.wojtekmaj.pl/react-lifecycle-methods-diagram/">
+                    <img src="https://user-images.githubusercontent.com/79434205/227422404-e7532aa1-f0e5-49d4-b78e-b1831ed82a69.png" width="400" />
+                </a>
+            </td>
+            <td align="center">
+                <a href="https://wavez.github.io/react-hooks-lifecycle/">
+                    <img src="https://user-images.githubusercontent.com/79434205/227490335-fe0bdba5-8714-4383-beec-e141ea7ede64.png" width="400" />
+                </a>
+            </td>
+        </tr>
+    </tbody>
+</table>
 
 모든 리액트 컴포넌트는 생명 주기 메서드를 가지며, 메서드를 이용하여 아래와 같은 과정 중 특정 시점에서 실행할 동작을 지정할 수 있음
 
