수정 : 11주차 이혜원

--- a/11_DFS_BFS/이혜원.md
+++ b/11_DFS_BFS/이혜원.md
@@ -34,12 +34,13 @@
 
 ## 예시
 
-|C까지 가는 경우|F까지 가는 경우|
-|:---:|:---:|
-|![image](https://user-images.githubusercontent.com/79434205/205854305-2f44a689-1d94-4c91-8c3b-8f8954ce08cb.png)|![image](https://user-images.githubusercontent.com/79434205/205854220-13fa7bf7-9764-4ba3-b65b-97869c2c8b7e.png)|
-|A - B - C|A - B - C - D - E - F|
+| |C까지 가는 경우|F까지 가는 경우|
+|:---:|:---:|:---:|
+|트리|![image](https://user-images.githubusercontent.com/79434205/205854305-2f44a689-1d94-4c91-8c3b-8f8954ce08cb.png)|![image](https://user-images.githubusercontent.com/79434205/205854220-13fa7bf7-9764-4ba3-b65b-97869c2c8b7e.png)|
+|방문하는 순서|A - B - C|A - B - C - D - E - F|
+|실제 경로|A - B - C|A - B - C - D - E - F|
 
-> 알고리즘 문제에서 주어진 배열의 개수가 작은 경우 DFS / BFS 문제일 가능성이 큼
+> ## 알고리즘 문제에서 주어진 배열의 개수가 작은 경우 DFS / BFS 문제일 가능성이 큼!
 
 ## 참고 사이트
 - https://www.geeksforgeeks.org/difference-between-bfs-and-dfs/
