수정: 13주차 임수진

--- a/13_Event_Loop/임수진.md
+++ b/13_Event_Loop/임수진.md
@@ -64,7 +64,7 @@ jin();
     ```
 ------
 
-### 🔖 setTimout
+### 🔖 setTimeout
 - 일정 시간이 경과된 이후 콜백 함수가 호출되도록 타이머를 생성
 - 타이머를 설정하고, 타이머가 만료되면 콜백 함수를 태스크 큐에 등록함
 - 타이머 시간이 4ms 이하인 경우 최소 지연 시간 4ms가 지정
