제출 : 16주차 이현섭

--- a/16_Class/이현섭.md
+++ b/16_Class/이현섭.md
@@ -1,1 +1,95 @@
-Class
+### 클래스 정의
+
+클래스 이름은 생성자 함수와 마찬가지로 파스칼 케이스를 사용하는 것이 일반적.
+
+```js
+class Person {}
+```
+
+일반적이지는 않지만 표현식으로도 클래스를 정의할 수 있음.
+
+```js
+const Person = class {};
+
+const Person = class MyClass {};
+```
+
+클래스를 표현식으로 정의할 수 있다는 것은 클래스가 값으로 사용할 수 있는 일급 객체라는 것을 의미.
+
+-   무명의 리터럴로 생성할 수 있음. 즉, 런타임에 생성이 가능
+-   변수나 자료구조에 저장 가능
+-   함수의 매개변수에 전달 가능
+-   함수의 반환값으로 사용 가능
+
+클래스는 함수, 클래스 몸체에는 0개 이상의 메서드만 정의할 수 있음. 클래스 몸체에서 정의할 수 있는 메서드는 contructor(생성자), 프로토타입 메서드, 정적 메서드 3가지가 있음.
+
+```js
+// 클래스 선언문
+class Person {
+    // 생성자
+    constructor(name) {
+        // 인스턴스 생성 및 초기화
+        this.name = name; // name 프로퍼티는 public
+    }
+
+    // 프로토타입 메서드
+    sayHi() {
+        console.log(`하이 내이름은 ${this.name}`);
+    }
+
+    // 정적 메서드
+    static sayHello() {
+        console.log("헬로");
+    }
+}
+
+// 인스턴스 생성
+const me = new Person("Lee");
+
+// 인스턴스의 프로퍼티 참초
+console.log(me.name);
+
+// 프로토타입 메서드 호출
+me.sayHi();
+
+// 정적 메서드 호출
+Person.sayHello();
+```
+
+### 클래스 호이스팅
+
+클래스는 함수로 평가됨.
+
+```js
+// 클래스 선언문
+class Person {}
+
+console.log(typeof Person); // function
+```
+
+클래스 선언문으로 정의한 클래스는 함수 선언문과 같이 소스코드 평가 과정, 즉 런타임 이전에 먼저 평가되어 함수 객체를 생성.
+
+단, 클래스는 클래스 정의 이전에 참조할 수 없음.
+클래스 선언문이 마치 호이스팅이 발생하지 않는 것처럼 보이나 그렇지 않음.
+
+### 인스턴스 생성
+
+클래스는 생성자 함수이며 new 연산자와 함께 호출되어 인스턴스 생성
+
+```js
+class Person {}
+
+const me = new Person();
+```
+
+### 메서드
+
+클래스 몸체에는 0개 이상의 메서드만 선언할 수 있음.
+
+1. contructor (생성자)
+2. 프로토타입 메서드
+3. 정적 메서드
+
+#### 출처
+
+-   책 <모던 자바스크립트 Deep Dive>
