--- a/17_TypeScript/이소민.md
+++ b/17_TypeScript/이소민.md
@@ -36,6 +36,88 @@
 
 <br/>
 
+#### * 타입가드란?
+- 변수의 타입을 추론하거나 확인하는 방법
+- 런타임에 변수의 실제 타입을 검사하여 타입스크립트 컴파일러에게 해당 변수의 타입 정보를 제공. 
+- 컴파일러는 변수의 타입을 정확히 알 수 있기 때문에 타입 관련 오류를 방지하여 타입 안정성을 높일 수 있음.
+<br/>
+
+#### * 주요 타입가드
+- typeof
+```js
+function doSomething(x: number | string) {
+    if (typeof x === 'string') { // Within the block TypeScript knows that `x` must be a string
+        console.log(x.subtr(1)); // Error, 'subtr' does not exist on `string`
+        console.log(x.substr(1)); // OK
+    }
+    x.substr(1); // Error: There is no guarantee that `x` is a `string`
+}
+```
+조건문 블록 내부에서 TypeScript는 x의 타입이 string임을 알고 있으므로 해당 블록에서는 x를 string으로 취급할 수 있음. 첫번째 콘솔의 경우 string 으로 타입을 알고 있으나 subtr이라는 문자열 메서드가 없기 때문에 에러 발생.
+조건문 밖에서 `x.substr(1);`와 같이 substr 메서드를 호출하는 부분에서는 오류 발생. 조건문 밖에서 x의 타입이 string일지, number일지 확실하지 않기 때문.
+
+<br/>
+
+- instanceof
+```js
+class Foo {
+    foo = 123;
+    common = '123';
+}
+
+class Bar {
+    bar = 123;
+    common = '123';
+}
+
+function doStuff(arg: Foo | Bar) {
+    if (arg instanceof Foo) {
+        console.log(arg.foo); // OK
+        console.log(arg.bar); // Error!
+    }
+    if (arg instanceof Bar) {
+        console.log(arg.foo); // Error!
+        console.log(arg.bar); // OK
+    }
+
+    console.log(arg.common); // OK
+    console.log(arg.foo); // Error!
+    console.log(arg.bar); // Error!
+}
+
+doStuff(new Foo());
+doStuff(new Bar());
+```
+doStuff 함수는 매개변수 arg의 타입을 확인하기 위해 instanceof 연산자를 사용.<br/>
+첫번째 조건문 안에선 arg가 Foo 클래스의 인스턴스인 것을 의미하며 조건문 블록 내부에서 arg를 Foo 타입으로 취급할 수 있음.<br/>
+조건문 밖에서 실행되는 세개의 콘솔중 arg.common의 경우 Foo, Bar 모두일 수 있으므로 해당 속성에 접근할 수 있지만 그 외의 arg.foo와 arg.bar의 경우 에러가 발생.
+
+<br/>
+
+- in
+```js
+interface A {
+  x: number;
+}
+interface B {
+  y: string;
+}
+
+function doStuff(q: A | B) {
+  if ('x' in q) {
+    // q: A
+  }
+  else {
+    // q: B
+  }
+}
+```
+A,B라는 인터페이스가 정의 되어있고 doStuff라는 함수는 q라는 매개변수 타입으로 A 또는 B를 받음. 함수 내부에서 조건문을 이용하여 q객체에 x라는 속성이 있는지 확인하여 x속성이 있으면 A타입으로 추론함.
+즉 in을 사용하여 q객체에 해당 속성이 있는지 확인하여 타입을 추론하여 조건문 블록 안에서 해당 타입에 맞게 변수를 사용할 수 있음.
+
+<br/>
+<br/>
+
 ### 2. 객체 타입의 옵셔널 프로퍼티
 * 옵셔널 프로퍼티
 - 일부 또는 모든 프로퍼티 타입을 선택적인 타입, '옵셔널'로 지정할 수 있음. 
@@ -243,3 +325,4 @@ function check(x?: number | undefined){
 ### 참고자료 
 https://www.samsungsds.com/kr/insights/typescript.html
 https://www.typescriptlang.org/ko/docs/handbook/intro.html
+https://basarat.gitbook.io/typescript/type-system/typeguard
