수정: 17주차 임수진

--- a/17_TypeScript/임수진.md
+++ b/17_TypeScript/임수진.md
@@ -1,4 +1,4 @@
-# 타입스크립트 (TypeScrip)
+# 타입스크립트 (TypeScript)
 자바스크립트는 과거 웹페이지의 보조적인 기능을 수행하기 위해 한정적인 용도로 만들어진 태생적 한계로 좋은 점도, 나쁜 점도 많다.
 <br>타입스크립트 또한 자바스크립트의 태생적 문제를 극복하고자 나온 자바스크립트 대체 언어 중 하나로 자바스크립트(ES5)의 Superset(상위확장)이다. 
 <br>C#의 창시자인 Anders Hejlsberg(아네르스 하일스베르)가 개발을 주도한 TypeScript는 Microsoft에서 2012년 발표한 오픈소스로,
