제출 : 21주차 이혜원

--- a/21_Event_Handler_Flow/이혜원.md
+++ b/21_Event_Handler_Flow/이혜원.md
@@ -1,9 +1,226 @@
-# 이벤트 핸들러
+# 이벤트 핸들러 (Event Handler)
+
+- 이벤트 발생 시 실행할 동작을 지정하는 함수
+- 이벤트 바인딩을 통해 컴포넌트와 이벤트 핸들러를 연결
+
+## HTML 이벤트 핸들러
+
+- HTML 코드에 인라인으로 작성
+- 이벤트 타겟은 해당 HTML 요소이며 따로 명시하지 않음
+- `this` 는 이벤트 타겟을 가리킴
+- HTML 요소의 속성에 접근 가능
+- HTML과 자바스크립트를 혼용하기 때문에 유지 보수가 어려움
+- 자바스크립트가 로딩되기 전 HTML 요소에 이벤트가 발생할 경우 에러가 날 수 있음
+- 위의 문제점으로 인해 사용을 지양해야 함
+
+```html
+<div onclick="clickHandler();">Event Target1</div>
+<div onkeydown="keyDownHandler();">Event Target2</div>
+```
+
+```javascript
+function clickHandler() {
+  console.log("clicked!");
+}
+
+function keyDownHandler() {
+  console.log("key pressed!");
+}
+```
+
+## DOM Level 0 이벤트 핸들러
+
+- `onclick`, `onkeydown`, ... 등의 이벤트 핸들러 속성을 이용하여 작성
+- 이벤트 한 개당 한 개씩의 핸들러 함수만 등록 가능하므로 이벤트 핸들러가 여러 개이면 마지막 한 개만 실행됨
+- 이벤트 버블링만 지원
+
+```javascript
+function clickHandler() {
+  console.log("clicked!");
+}
+
+function keyDownHandler() {
+  console.log("key pressed!");
+}
+
+// 이벤트 핸들러 등록
+EventTarget1.onclick = clickHandler;
+EventTarget2.onkeydown = keyDownHandler;
+// 한 개의 이벤트만 등록 가능하므로 위의 이벤트는 덮어씌워지고 아래의 이벤트만 실행됨
+EventTarget2.onkeydown = () => {
+  console.log("key pressed!!!!");
+};
+
+// 이벤트 핸들러 제거
+EventTarget1.onclick = null;
+EventTarget2.onkeydown = null;
+```
+
+## DOM Level 2 이벤트 핸들러
+
+- `addEventListener()`를 이용하여 작성
+- 이벤트 이름, 핸들러 함수, 캡처링 여부 (기본값: `false`) 를 인자로 받음
+- 이벤트 한 개에도 이벤트 핸들러를 여러 개 등록할 수 있음
+- 이벤트 버블링 / 캡처링 둘 다 지원
+- HTML 요소 외에도 모든 DOM 요소에 이벤트 바인딩 가능
+
+```javascript
+function clickHandler() {
+  console.log("clicked!");
+}
+
+function keyDownHandler() {
+  console.log("key pressed!");
+}
+
+// 이벤트 핸들러 등록
+EventTarget1.addEventListender("click", clickHandler);
+EventTarget2.addEventListender("keydown", keyDownHandler);
+// 여러 이벤트를 등록할 수 있으므로 위의 이벤트, 아래의 이벤트 모두 실행됨
+EventTarget2.addEventListender("keydown", () => {
+  console.log("key pressed!!!!");
+});
+
+// 이벤트 핸들러 제거
+EventTarget1.removeEventListender("click", clickHandler);
+EventTarget2.removeEventListender("keydown", keyDownHandler);
+// addEventListener 때와 같은 인자를 전달해야 하므로, 핸들러 함수가 익명 함수였다면 제거되지 않음
+// 그래서 아래의 이벤트는 제거되지 않음
+EventTarget2.removeEventListender("keydown", () => {
+  console.log("key pressed!!!!");
+});
+```
 
 # 이벤트 흐름
 
-## 이벤트 버블링
+```html
+<ul id="navbar">
+  <li class="navitem">
+    <a id="home">Home</a>
+  </li>
+  <li class="navitem">
+    <a id="about">About</a>
+  </li>
+  <li class="navitem">
+    <button id="login">Login</button>
+  </li>
+</ul>
+```
 
-## 이벤트 캡처링
+```javascript
+const navbar = document.getElementById("navbar");
+const navItemList = document.getElementsByClassName("navitem");
+```
 
-## 이벤트 위임
+### `event.target`
+
+- 실제 이벤트가 트리거된 가장 하위 객체
+
+### `event.currentTarget`
+
+- 이벤트 핸들러가 할당되어 있는 객체 (`obj.addEventListener(...)`일 때 `obj`)
+- `this`와 같음
+
+```javascript
+// 클릭 시 event.target과 event.currentTarget의 id 또는 className 출력
+Array.from(navItemList).forEach((navItem) => {
+  navItem.addEventListener("click", (event) => {
+    console.log(`event target: ${event.target.id || event.target.className}`);
+    console.log(
+      `event currentTarget: ${
+        event.currentTarget.id || event.currentTarget.className
+      }`
+    );
+  });
+});
+// 실제 이벤트가 일어나는 객체인 event.target은 home, about, login을 누를 때마다 다르게 나오는 반면
+// 이벤트 리스너가 등록된 객체인 event.currentTarget은 navItem으로 동일
+```
+
+## 이벤트 버블링 (Event Bubbling)
+
+- 처음 이벤트가 트리거된 태그부터 시작해서 상위 태그, 상위 태그 ... `document`까지 거슬러 올라가면서 각각 적용된 이벤트 핸들러가 실행되는 현상
+- 상위 태그에 이벤트 핸들러가 적용되어 있다면, 그 하위 태그에 이벤트 핸들러가 없어도 이벤트가 실행됨
+- 상위 태그에 이벤트를 전파시키고 싶지 않다면 상위 태그에 `Event.stopPropagation()` 메서드를 사용
+
+```javascript
+document.body.addEventListener("click", (event) => {
+  console.log("body clicked");
+});
+navbar.addEventListener("click", (event) => {
+  console.log("navbar clicked");
+});
+Array.from(navItemList).forEach((navItem) => {
+  navItem.addEventListener("click", (event) => {
+    console.log("navItem clicked");
+  });
+});
+// Home/About/Login 클릭 시 navItem clicked -> navbar clicked -> body clicked 순서로 출력
+```
+
+## 이벤트 캡처링 (Event Capturing)
+
+- 최상위 태그부터 시작하여 하위 태그로 내려가면서 이벤트가 발생한 태그를 찾으면 실행시키는 것
+- 이벤트가 트리거된 태그의 하위 태그에는 이벤트가 적용되지 않음
+- `addEventListener()`에서 `capture` 옵션을 `true`로 설정해 주어야 함 (기본값인 `false`는 버블링만 발생)
+- 아래로 내려가면서 캡처링 -> 이벤트 타겟의 이벤트 실행 -> 다시 위로 올라가면서 버블링
+- 버블링과 마찬가지로 `Event.stopPropagation()` 메서드를 이용하여 이벤트 전파를 막을 수 있음
+- 사용되는 경우가 많지 않음
+
+```javascript
+document.body.addEventListener(
+  "click",
+  (event) => {
+    console.log("body clicked");
+  },
+  true
+);
+navbar.addEventListener(
+  "click",
+  (event) => {
+    console.log("navbar clicked");
+  },
+  true
+);
+Array.from(navItemList).forEach((navItem) => {
+  navItem.addEventListener(
+    "click",
+    (event) => {
+      console.log("navItem clicked");
+    },
+    true
+  );
+});
+// Home/About/Login 클릭 시 body clicked -> navbar clicked -> navItem clicked 순서로 출력
+```
+
+## 이벤트 위임 (Event Delegation)
+
+- 최상위 요소에만 이벤트 핸들러를 적용하여 그 핸들러에서 하위 요소들의 이벤트를 제어하는 것
+- `event.target`의 `id`가 무엇인지 등 조건문을 사용하여 하위 요소들의 서로 다른 동작을 지정할 수 있음
+- 동적으로 추가되는 요소의 이벤트 적용에 용이
+- 메모리 낭비, 누수 방지
+
+```javascript
+navbar.addEventListener("click", (event) => {
+  if (event.target.tagName === "A") {
+    console.log(`${event.target.id || event.target.className} is <a />`);
+    return;
+  }
+  if (event.target.tagName === "BUTTON") {
+    console.log(`${event.target.id || event.target.className} is <button />`);
+    return;
+  }
+});
+```
+
+## 참고 사이트
+
+- https://developer.mozilla.org/en-US/docs/Web/Events/Event_handlers
+- https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Building_blocks/Events
+- https://www.javascripttutorial.net/javascript-dom/handling-events-in-javascript/
+- https://en.wikipedia.org/wiki/DOM_events#Event_handling_models
+- https://ko.javascript.info/bubbling-and-capturing
+- https://www.geeksforgeeks.org/what-is-event-bubbling-and-event-capturing-in-javascript/
+- http://javascript.info/tutorial/event-delegation
+- https://ui.toast.com/weekly-pick/ko_20160826
