수정 : 23주차 이소민

--- a/23_Process_Scheduling/이소민.md
+++ b/23_Process_Scheduling/이소민.md
@@ -30,11 +30,18 @@
 - **선점방식**
     - 프로세스가 CPU를 할당받아 실행 중이더라도 운영체제가 이를 강제로 회수할 수 있는 방식
     - CPU 처리 시간이 매우 긴 프로세스의 CPU 사용 독점을 막을 수 있어 효율적인 운영 가능
-    - 잦은 문맥 교환으로 오버헤드(Overhead)가 커질 수 있음. 
+    - 잦은 context switching으로 overhead가 커질 수 있음. 
 - **비선점 방식**
     - 프로세스가 자원을 할당 받았을 경우, 자원을 스스로 반납할 때까지 계속 그 자원을 사용하도록 허용하는 정책
-    - 필요한 문맥 교환만 일어나므로 오버헤드(overhead)가 상대적으로 적지만 프로세스의 배치에 따라 효율성 차이가 많이 남.
+    - 필요한 context switching만 일어나므로 overhead가 상대적으로 적지만 프로세스의 배치에 따라 효율성 차이가 많이 남.
 
+
+> #### context switching (문맥교환) <br/>
+> - 하나의 프로세스가 CPU를 사용 중인 상태에서 다른 프로세스가 CPU를 사용하도록 하기 위해,  <br/>
+> 이전의 프로세스의 상태(문맥)를 보관하고 새로운 프로세스의 상태를 적재하는 작업<br/>
+> #### overhead (오버헤드)
+> - 어떤 처리를 하기 위해 들어가는 간접적인 처리 시간 · 메모리
+> - A라는 처리를 단순하게 실행한다면 10초 걸리는데<br/> 안전성을 고려하고 부가적인 B라는 처리를 추가한 결과 처리시간이 15초 걸렸다면, 오버헤드는 5초
 <br/>
 
 ## 1-3. Process Scheduling 알고리즘
@@ -119,21 +126,17 @@
     - 우선 순위 낮음
     - FCFS 방식
 
-
-
-
-
 <image src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fbdqr7e%2FbtrzaWqfAzs%2FO8Kxbw2DO1GrBcOLf3aV0k%2Fimg.png" width="300px"/><br/>
 <image src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbiU9IP%2FbtrzbeLCWaa%2FHFZ7PP68kEWbwH9N5hqKi1%2Fimg.png" width="500px"/><br/>
 
-
 <br/>
 
-
 ### 참고자료 
-https://namu.wiki/w/%ED%94%84%EB%A1%9C%EC%84%B8%EC%8A%A4%20%EC%8A%A4%EC%BC%80%EC%A4%84%EB%A7%81#s-3.1<br/>
-https://code-lab1.tistory.com/45<br/>
+위키백과 정의 참고<br/>
+https://ko.wikipedia.org/wiki/%EB%AC%B8%EB%A7%A5_%EA%B5%90%ED%99%98 <br/>
+https://ko.wikipedia.org/wiki/%EC%98%A4%EB%B2%84%ED%97%A4%EB%93%9C<br/>
 https://ko.wikipedia.org/wiki/%EB%B9%84%EC%84%A0%EC%A0%90_%EC%8A%A4%EC%BC%80%EC%A4%84%EB%A7%81<br/>
-https://ko.wikipedia.org/wiki/%EB%9D%BC%EC%9A%B4%EB%93%9C_%EB%A1%9C%EB%B9%88_%EC%8A%A4%EC%BC%80%EC%A4%84%EB%A7%81<br/>
+https://ko.wikipedia.org/wiki/%EB%9D%BC%EC%9A%B4%EB%93%9C_%EB%A1%9C%EB%B9%88_%EC%8A%A4%EC%BC%80%EC%A4%84%EB%A7%81<br/><br/>
+참고 블로그<br/>
+https://code-lab1.tistory.com/45<br/>
 https://wpaud16.tistory.com/entry/%EC%9A%B4%EC%98%81%EC%B2%B4%EC%A0%9C-Multilevel-Queue-%EB%A9%80%ED%8B%B0-%EB%A0%88%EB%B2%A8-%ED%81%90<br/>
-https://wpaud16.tistory.com/entry/%EC%9A%B4%EC%98%81%EC%B2%B4%EC%A0%9C-Multilevel-Feedback-Queue-%EB%A9%80%ED%8B%B0%EB%A0%88%EB%B2%A8-%ED%94%BC%EB%93%9C%EB%B0%B1-%ED%81%90?category=954432<br/>
