--- a/23_Process_Scheduling/이소민.md
+++ b/23_Process_Scheduling/이소민.md
@@ -34,20 +34,18 @@
 - **비선점 방식**
     - 프로세스가 자원을 할당 받았을 경우, 자원을 스스로 반납할 때까지 계속 그 자원을 사용하도록 허용하는 정책
     - 필요한 context switching만 일어나므로 overhead가 상대적으로 적지만 프로세스의 배치에 따라 효율성 차이가 많이 남.
+- **실행 시간(Burst Time)**
+    - 프로세스가 실행을 완료하는 데 필요한 CPU 시간
 
-
-> #### context switching (문맥교환) <br/>
+> #### ✦ context switching (문맥교환) <br/>
 > - 하나의 프로세스가 CPU를 사용 중인 상태에서 다른 프로세스가 CPU를 사용하도록 하기 위해,  <br/>
 > 이전의 프로세스의 상태(문맥)를 보관하고 새로운 프로세스의 상태를 적재하는 작업<br/>
-> #### overhead (오버헤드)
+> #### ✦ overhead (오버헤드)
 > - 어떤 처리를 하기 위해 들어가는 간접적인 처리 시간 · 메모리
 > - A라는 처리를 단순하게 실행한다면 10초 걸리는데<br/> 안전성을 고려하고 부가적인 B라는 처리를 추가한 결과 처리시간이 15초 걸렸다면, 오버헤드는 5초
 <br/>
 
 ## 1-3. Process Scheduling 알고리즘
-- 프로세스 스케줄링은 운영체제의 특징과 시스템 요구사항에 따라 다양한 알고리즘 방식으로 동작. 
-<br/>
-
 ### 1-3-1. FCFS(First-Come, First-Served)
 - CPU를 먼저 요청한 프로세스가 먼저 CPU를 배정받는 스케줄링 방법
 - 비선점 방식 스케줄링이므로 대화형 작업에는 부적합
@@ -63,13 +61,15 @@
 <br/>
 
 ### 1-3-2. SJF(Shortest-Job-First)
-- CPU 한차례 사용시간(CPU burst time)이 작은 프로세스부터 먼저 스케줄링 하는 알고리즘
+- CPU 한차례 사용시간(CPU Burst Time)이 작은 프로세스부터 먼저 스케줄링 하는 알고리즘
 - 비선점형과 선점형 존재
 - 평균 대기 시간을 줄일 수 있음
-- 다음 프로세스의 CPU burst time 예측 어려움
-- 프로세스의 실행 시간(버스트 시간)이 길면 계속해서 후순위가 됨 - 기아문제 발생
+- 다음 프로세스의 Burst Time 예측 어려움
+- 프로세스의 실행 시간(버스트 시간)이 길면 계속해서 후순위가 됨 - 기아 현상 발생
 - convoy effect를 최소화할 수 있음
-
+> #### ✦ 기아 현상 (starvation)
+> 우선순위 기준에 따라 자원을 할당받는 상황에서 <br/>
+우선순위가 낮은 자료들이 계속해서 후순위가 되며 자원을 할당받지 못하는 현상 
 #### 비선점형 SJF
 - 실행되고 있는 프로세스는 끝까지 실행
 
@@ -77,7 +77,7 @@
 
 
 #### 선점형 SJF (SRTF ; Shortest Remaining Time First)
-- 현재 실행되고 있는 프로세스의 남은 burst time보다 도착한 다음 프로세스의 burst time이 더 짧다면 다음 프로세스를 실행하도록 바꿈.
+- 현재 실행되고 있는 프로세스의 남은 Burst Time보다 도착한 다음 프로세스의 Burst Time이 더 짧다면 다음 프로세스를 실행하도록 바꿈.
 
 <image src="https://velog.velcdn.com/images/miniso/post/3bdce12d-9c9d-4321-8a34-03957041d017/image.jpg" width="700px">
 
@@ -86,8 +86,11 @@
 ### 1-3-3. Priority
 - 우선순위 높은 프로세스에 CPU 할당. 
 - 우선순위가 동일하다면 FCFS 기법을 이용하여 처리.
-- 낮은 우선순위 프로세스가 후순위로 가기 때문에 기아문제 발생 가능
-- 기아문제 해결 위해 aging(시간 지날수록 프로세스 우선순위 높이는 방식) 사용 가능
+- 낮은 우선순위 프로세스가 후순위로 가기 때문에 기아 현상 발생 가능
+- 기아 현상 해결 위해 aging기법 사용 가능
+
+> #### ✦ aging
+> 자원이 할당되기를 기다린 시간에 비례하여 우선순위를 부여함으로써 기아 현상을 방지하는 기법
 
 <image src="https://velog.velcdn.com/images/miniso/post/9a3d43a6-5899-46e3-9226-e9581b0549d5/image.jpg" width="500px">
 
@@ -98,7 +101,7 @@
 - 할당된 시간 안에 완료되지 못한 프로세스는 ready queue의 맨 뒤에 배치되도록 하여 CPU를 독점하지 않고 공평하게 이용
 - 대화형 시스템에서 사용되는 선점 스케줄링 방식
 - 시간 할당량이 너무 크면 FCFS 스케줄링과 같아짐
-- 시간 할당량이 너무 작으면 context switching에 따른 오버헤드가 크게 증가함
+- 시간 할당량이 너무 작으면 context switching에 따른 overhead가 크게 증가함
 - 보통 시간 단위는 10 ms ~ 100 ms
 
 > ✦ 시간 단위(Time Quantum)<br/>
@@ -109,22 +112,15 @@
 <br/>
 
 ### 1-3-5. Multilevel Queue 
-- single queue에서는 모든 프로세서의 우선순위를 찾아야 하기 때문에 시간 복잡도가 Q(n)
+- single queue에서는 모든 프로세서의 우선순위를 찾아야 하기 때문에 시간 복잡도가 O(n)
 - Multi level Queue를 도입하면 우선순위가 높은 queue에서 먼저 schedule을 할 수 있기 때문에 시간 복잡도를 1로 줄일 수 있음.
 - 특징에 따라 다른 알고리즘을 사용할 수 있다는 점이 가장 큰 장점
 - 우선순위가 낮은 작업은 CPU 할당을 가지지 못하는 기아 현상 발생 가능 
 - Time Slice를 통해 각 큐의 CPU time을 적절하게 할당해야 함(foreground - RR에 80%, background - FCFS에 20%)
 
-- foreground queue
-    - interactive한 작업
-    - cpu burst가 짧은 queue
-    - 우선 순위 높음
-    - RR 방식
-
-- background queue
-    - batch 등 긴 시간을 필요로 하는 작업
-    - 우선 순위 낮음
-    - FCFS 방식
+|foreground queue|background queue|
+|:-:|:-:|
+| - interactive<br/>- cpu burst가 짧은 queue<br/>- 우선 순위 높음 <br/> - RR방식|- batch 등 긴 시간을 필요로 하는 작업<br/>- 우선 순위 낮음 <br/>- FCFS 방식|
 
 <image src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fbdqr7e%2FbtrzaWqfAzs%2FO8Kxbw2DO1GrBcOLf3aV0k%2Fimg.png" width="300px"/><br/>
 <image src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbiU9IP%2FbtrzbeLCWaa%2FHFZ7PP68kEWbwH9N5hqKi1%2Fimg.png" width="500px"/><br/>
@@ -135,6 +131,7 @@
 위키백과 정의 참고<br/>
 https://ko.wikipedia.org/wiki/%EB%AC%B8%EB%A7%A5_%EA%B5%90%ED%99%98 <br/>
 https://ko.wikipedia.org/wiki/%EC%98%A4%EB%B2%84%ED%97%A4%EB%93%9C<br/>
+https://ko.wikipedia.org/wiki/%EA%B8%B0%EC%95%84_%EC%83%81%ED%83%9C<br/>
 https://ko.wikipedia.org/wiki/%EB%B9%84%EC%84%A0%EC%A0%90_%EC%8A%A4%EC%BC%80%EC%A4%84%EB%A7%81<br/>
 https://ko.wikipedia.org/wiki/%EB%9D%BC%EC%9A%B4%EB%93%9C_%EB%A1%9C%EB%B9%88_%EC%8A%A4%EC%BC%80%EC%A4%84%EB%A7%81<br/><br/>
 참고 블로그<br/>
