수정 : 24주차 이소민

--- a/24_JWT/이소민.md
+++ b/24_JWT/이소민.md
@@ -39,7 +39,7 @@
 5. 서버는 클라이언트로부터 받은 요청과 함께 JWT 검증
 6. 검증 결과에 따라 권한 부여
 
-> 만약 토큰 기간이 만료되었다면 클라이언트는 리프레시 토큰을 이용해 새로운 access token을 발급받음.
+> 만약 토큰 기간이 만료되었다면 클라이언트는 refresh token을 이용해 새로운 access token을 발급받음.
 
 <br/>
 
