제출 : 25주차 이혜원

--- a/25_World_Wide_Web/이혜원.md
+++ b/25_World_Wide_Web/이혜원.md
@@ -1,1 +1,55 @@
+# 월드 와이드 웹 (World Wide Web)
 
+- 인터넷을 통해 사람들이 정보를 공유할 수 있는 전 세계적인 정보 공간
+- 1989년 팀 버너스 리가 고안
+- HTTP 프로토콜을 통해 클라이언트-서버 데이터 전송 관리
+- HTML을 사용하여 웹 문서 작성
+- 하이퍼링크를 이용하여 다른 웹 페이지로 이동
+- 웹 페이지의 도메인에 www를 접두로 사용하는 관례가 있으나, 사용하지 않는 경우도 많아짐
+- W3C (World Wide Web Consortium)에서 웹 표준 제정 및 관리
+
+## 웹 브라우저
+
+- HTML 문서와 파일을 출력하는 그래픽 사용자 인터페이스 기반의 응용 소프트웨어
+- 클라이언트의 역할
+- 북마크, 방문 기록, 쿠키 등을 관리
+
+## 웹 서버
+
+- HTTP 프로토콜을 통해 들어오는 요청을 받아들여 HTML 문서를 클라이언트에 전달하는 소프트웨어
+- 서버의 역할
+- 웹 사이트들을 저장
+
+## 웹 1.0
+
+- 정적 페이지
+- 서버에서 컨텐츠 제공 (일방적) -> 읽기만 가능하고 쓸 수는 없음
+
+## 웹 2.0
+
+- 동적 페이지
+- 사용자가 직접 컨텐츠 생산 (쌍방향) -> 읽기, 쓰기 둘 다 가능
+- 컨텐츠 생산은 사용자가 하지만, 중앙 플랫폼이 그 데이터를 소유 및 관리 -> 정보의 독점화
+- 소셜 웹을 통한 사용자들끼리의 상호 작용
+- 모든 사용자에게 동등한 기회 제공
+- REST/SOAP API를 사용한 비동기 통신
+
+## 웹 3.0
+
+- 시맨틱 웹
+- 블록체인 시스템을 이용한 탈중앙화로 인해 사용자가 직접 컨텐츠 생산 및 소유 -> 정보의 개인화
+- 회원 가입 대신 지갑을 통하여 사용자 인증
+- 개인 맞춤형 정보 제공
+- 데이터 보안 강화
+- 암호화폐, 메타버스 등에서 사용
+- 마케팅 용어일 뿐이라는 비판도 존재
+
+## 참고 사이트
+
+- https://en.wikipedia.org/wiki/World_Wide_Web
+- https://developer.mozilla.org/ko/docs/Glossary/World_Wide_Web
+- https://en.wikipedia.org/wiki/Web_2.0
+- https://en.wikipedia.org/wiki/Web3
+- https://www.samsungsds.com/kr/insights/web3.html
+- https://www.codestates.com/blog/content/web3-0%EC%9D%B4%EB%9E%80-%EC%A0%95%EC%9D%98%EC%99%80-%ED%8A%B9%EC%A7%95-%EC%A0%84%EB%A7%9D
+- https://ethereum.org/ko/web3/
