--- a/32_XSS_CSRF/이소민.md
+++ b/32_XSS_CSRF/이소민.md
@@ -1,25 +1,24 @@
-## XSS (Cross-site Scripting)
+# 1. XSS (Cross-site Scripting)
 - 공격자가 웹사이트에 악성 스크립트를 삽입할 수 있도록 하는 보안 공격
 - 피해자에 의해 실행되며 공격자가 사용자로 위장할 수 있게 만듦
-- XSS를 통해 C&C(좀비 PC에 명령 내리거나 악성 코드 제어하는 서버)로 리다이렉트하거나<br>사용자의 쿠키 탈취하여 세션 하이재킹 공격 할 수 있음 
+- XSS를 통해 C&C(좀비 PC에 명령 내리거나 악성 코드 제어하는 서버)로 리다이렉트하거나<br>
+사용자의 쿠키 탈취하여 세션 하이재킹 공격 할 수 있음 
 
-> 세션 하이재킹 (Session Hijacking)
-세션 하이재킹 (Session Hijacking) 은 공격자가 두 컴퓨터 간의 유효한 세션을 장악할 때 발생합니다. 
-공격자는 시스템에 침입하여 데이터를 스누핑하기 위해 유효한 세션 ID를 훔칩니다.
+> **세션 하이재킹 (Session Hijacking)**<br>
+공격자가 두 컴퓨터 간의 유효한 세션을 장악할 때 발생<br>
+공격자는 시스템에 침입하여 데이터를 스누핑하기 위해 유효한 세션 ID를 훔침
 
 <br>
 
-### XSS 공격방식
-#### Stored XSS
-
-
-- 사용자의 입력이 서버에 저장되고 나중에 다른 사용자에게 표시되는 경우
-- 게시글, 댓글, 사용자 프로필 업데이트, 게시판, 블로그등 사용자 생성 콘텐츠에 많이 나타남
-- 공격자가 삽입한 악성 스크립트가 서버에 영구적으로 저장됨
+## 1-1. XSS 공격방식
+### ► Stored XSS
+- 사용자의 입력이 서버에 **저장**되고 나중에 다른 사용자에게 표시되는 경우
+- 게시글, 댓글, 사용자 프로필 업데이트, 게시판, 블로그등 **사용자 생성 콘텐츠에 많이 나타남**
+- 공격자가 삽입한 **악성 스크립트가 서버에 영구적으로 저장**됨
 - 피해자가 해당 페이지 방문하면 악성 스크립트 실행
 
-> 공격 시나리오 
-> 1. 공격자는 보안 취약 사이트의 입력 필드에 악성 스크립트를 입력하고 **저장**, 이 스크립트는 데이터베이스에 저장됨
+> **공격 시나리오**
+> 1. 공격자는 보안 취약 사이트의 입력 필드에 악성 스크립트를 입력하고 저장, 이 스크립트는 데이터베이스에 저장됨
 > 2. 사용자가 웹 응용 프로그램을 사용하거나 특정 페이지 방문할 때 악성 스크립트가 포함된 데이터를 불러옴<br>
 (공격자가 악성스크립트가 포함된 게시글을 작성하고 이를 저장하면 <br>다른 이용자가 해당 게시글을 열람할 때마다 악성 스크립트가 실행되는 것.)
 > 3. 웹 응용 프로그램은 데이터를 렌더링하는 동안 악성 스크립트를 실행하고 피해자 브라우저에서 악성 동작을 수행함<br>
@@ -27,29 +26,30 @@
 
 <br>
 
-#### Reflected XSS
-- 웹 서버는 오류 메시지, 검색 결과 또는 요청의 일부로 서버에 전송된 데이터를 포함하는 기타 응답과 같이 주입된 스크립트를 사용자의 브라우저에 다시 reflect함 (사용자에게 입력받은 검색어를 그대로 보여주는 곳, 입력값을 에러 메세지에 포함하여 보여주는 곳에 악성 스크립트 삽입시 서버는 해당 악성 스크립트를 포함하여 응답)
-- 즉 사용자 입력이 서버에 저장되지 않고 즉각적으로 사용자에게 반환되는 상황에서 발생
-- 검색창 및 url 매개변수 통한 입력의 경우
+### ► Reflected XSS
+- 사용자에게 입력받은 검색어를 그대로 보여주는 곳, 입력값을 에러 메세지에 포함하여 보여주는 곳에<br>
+악성 스크립트 삽입시 서버는 해당 악성 스크립트를 포함하여 응답함
+- 즉 사용자 입력이 서버에 저장되지 않고 즉각적으로 사용자에게 반환되는 상황에서 발생<br>
+(ex. 검색창 및 url 매개변수 통한 입력의 경우)
 - 브라우저는 응답이 사용자가 이미 상호 작용한 "신뢰할 수 있는" 서버에서 온 것으로 생각하기에 발생
-- 웹 어플리케이션의 지정된 파라미터를 사용할 때 발생하는 취약점을 이용한 공격방식
-- 예) 검색어 쿼리스트링을 URL에 담아 전송했을 때 서버가 필터링 거치지 않고 쿼리에 포함된 스크립트를 응답 페이지에 담아 전송
+- 웹 어플리케이션의 지정된 파라미터를 사용할 때 발생하는 취약점을 이용한 공격방식<br>
+(ex. 검색어 쿼리스트링을 URL에 담아 전송했을 때 서버가 필터링 거치지 않고 응답 페이지에 담아 전송)
 - 공격용 스크립트가 대상 웹사이트에 있지 않고 다른 매체에 포함될 수 있음
 
-> 공격 시나리오 
+> **공격 시나리오** 
 > 1. 보안이 취약한 사이트에서 사용자 정보를 빼돌릴 수 있는 스크립트가 담긴 URL을 만들어 일반 사용자에게 스팸 메일로 전달
 > 2. 메일을 통해 전달받은 URL 접속
 > 3. 일반 사용자 브라우저에서 보안이 취약한 사이트로 요청 전달되면서 악성 스크립트 실행
 
 <br>
 
-#### DOM Based XSS
+### ► DOM Based XSS
 - 페이로드는 원본 클라이언트 측 스크립트가 사용하는 DOM 환경(피해자의 브라우저에서)을 수정한 걸로 실행됨. 
 - 즉, 페이지 자체는 변경되지 않지만 DOM 환경에 대한 악의적인 수정으로 인해 
     페이지에 포함된 클라이언트측 코드가 예기치 않은 방식으로 실행됨.
 - DOM based XSS 공격은 다른 XSS 공격과는 다르게 서버 측에서 탐지가 어려움
 
-> 공격 시나리오  
+> **공격 시나리오**  
 > 1. 보안이 취약한 웹 페이지에서 악성 스크립트가 실행되도록 URL 주소를 만들어 일반 사용자에게 전달
 > 2. 일반 사용자는 메일 등을 통해 전달받은 URL 링크 클릭, 서버로부터 HTML 문서를 전달받음
 > 3. 사용자의 브라우저가 응답 받은 HTML 문서를 읽으면서 필요한 스크립트를 실행하는 중에 악성 스크립트가 동작함
@@ -57,70 +57,71 @@
 
 <br>
 
-### 방어 기법
-#### 1.textContent, innerText 사용 지향 
+## 1-2. 방어 기법
+### ► textContent, innerText 사용 지향 
 - 사용자가 입력한 데이터를 HTML로 해석하지 않고 텍스트로 처리하도록 권장하는 방법
 - HTML5에선 innerHTML을 통해 주입한 스크립트는 실행되지 않지만<br>
 onerror 이벤트 속성을 이용하여 스크립트를 주입할 수 있기 때문
 
-#### 2.쿠키 사용시 HttpOnly 옵션 활성화
+### ► 쿠키 사용시 HttpOnly 옵션 활성화
 - HttpOnly 옵션 활성화시 악성 스크립트를 통해 쿠키에 접근하려는 시도가 차단됨. 
 - 옵션 활성화시 세션 하이재킹 공격을 방어할 수 있음
 
-#### 3.로컬 스토리지 사용시 민감한 정보 저장하지 않기
-- 로컬 스토리지는 클라이언트측에서 데이터를 저장하는 용도로 사용<br>
-이러한 정보는 서버측에 안전하게 저장되는 것이 좋음
+### ► 로컬 스토리지 사용시 민감한 정보 저장하지 않기
+- 로컬 스토리지는 클라이언트측에서 데이터를 저장하는 용도로 사용하기 때문에<br>
+민감한 정보는 서버측에 안전하게 저장되는 것이 좋음
 
-#### 4. 입출력값 검증
+### ► 입출력값 검증
 - 입력값 검증을 통해 악의적인 코드 들어오지 않도록 함
 - 출력시 특수 문자를 이스케이프하여 사용자 입력이 안전하게 출력되도록 함<br>
 (ex. < 를 `&lt;` 로, > 를 `&gt;` 로)
 
-#### 5. Anti XSS 라이브러리 
+### ► Anti XSS 라이브러리 
 - XSS 공격 방어 위한 복잡한 로직 구현할 필요 없이 보안 강화 가능<br>
-하지만 입력값 검증 및 보안 개발 원칙은 준수해야 함. 
+- 입력값 검증 및 보안 개발 원칙은 준수해야 함
 
 <br><br>
 
-## CSRF (Cross-Site Request Forgery)
-신뢰할 수 있는 사용자를 사칭해 웹 사이트에 원하지 않는 명령을 보내는 공격<br>
-공격자는 사용자의 동의나 인지없이 사용자의 브라우저가 웹사이트의 백엔드에 요청을 수행하도록 함.<br>
-공격자는 XSS 페이로드를 사용하여 CSRF 공격을 할 수 있음
-
-
-#### 예) 다른 곳으로 이동하려 하는 링크 뒤 URL에 악성 매개변수를 포함하는 식
-> `<img src="https://www.example.com/index.php?action=delete&id=123" />`
->
->https://www.example.com에 수정할 수 있는 권한이 있는 사용자의 경우,<br> `<img>` 요소는 자신이 https://www.example.com에 없더라도, <br>눈치채지 못한 상태로 https://www.example.com에서 작업을 실행함.
+# 2. CSRF (Cross-Site Request Forgery)
+- 신뢰할 수 있는 사용자를 사칭해 웹 사이트에 원하지 않는 명령을 보내는 공격
+- 공격자는 사용자의 동의나 인지없이 사용자의 브라우저가 웹사이트의 백엔드에 요청을 수행하도록 함
+- 공격자는 XSS 페이로드를 사용하여 CSRF 공격을 할 수 있음
 
 <br>
 
-### 방어 기법
-일반적으로 GET 메소드와 같은 조회성 요청은 제외,<br>
-기밀데이터거나 GET을 통해 쓰기 및 변경이 이루어진다면 방어 기법적용 필요<br>
-주로 데이터 조작 가능한 POST, PATCH, DELETE 메소드에 적용<br>
+-  ex. 다른 곳으로 이동하려 하는 링크 뒤 URL에 악성 매개변수를 포함하는 식
+> `<img src="https://www.example.com/index.php?action=delete&id=123" />`
+>
+>https://www.example.com에 수정할 수 있는 권한이 있는 사용자의 경우<br> `<img>` 요소는 자신이 https://www.example.com 에 없더라도, <br>눈치채지 못한 상태로 https://www.example.com 에서 작업을 실행함.
 
-#### 1. referer 검증
-- HTTP 헤더에 있는 referer 정보를 체크하여, 해당 요청이 신뢰할만한 페이지에서 발생한 것인지 확인<br>
-- Referer 헤더에는 현재 요청을 만드는 페이지의 URL이 포함되어 있으며, 이를 통해 서버는 요청의 출처를 확인할 수 있음.
-- 웹 애플리케이션은 요청을 받을 때 Referer 헤더를 확인하고, 이 요청이 웹 페이지에서 시작된 것이 아니거나 유효한 Referer 헤더가 없는 경우 해당 요청을 거부할 수 있음.
+<br>
+
+## 2-1. 방어 기법
+- 일반적으로 GET 메소드와 같은 조회성 요청은 제외
+- 기밀 데이터거나 GET을 통해 쓰기 및 변경이 이루어진다면 방어 기법적용 필요
+- 주로 데이터 조작 가능한 POST, PATCH, DELETE 메소드에 적용
+
+### ► referer 검증
+- HTTP 헤더에 있는 referer 정보를 체크하여, 해당 요청이 신뢰할만한 페이지에서 발생한 것인지 확인
+- Referer 헤더에는 현재 요청을 만드는 페이지의 URL이 포함되어 있으며, 이를 통해 서버는 요청의 출처를 확인할 수 있음
+- 웹 애플리케이션은 요청을 받을 때 referer 헤더를 확인하고,<br> 이 요청이 웹 페이지에서 시작된 것이 아니거나 유효한 referer 헤더가 없는 경우 해당 요청을 거부할 수 있음.
 - 단, referer 정보는 조작이 가능하고 일부 상황에서 referer 헤더가 누락될 수 있다는 단점이 있음
 - 때문에 CSRF 토큰과 함께 referer 검증을 적용하는 것이 보안측면에서 좋음.
 
-#### 2. CSRF 토큰 발급
+### ► CSRF 토큰 발급
 - 로그인한 유저에게 CSRF 토큰을 발급 
 - 유저가 요청을 보낼 때 해당 토큰을 함께 보내야 함
 - 서버는 요청을 처리하기 전에 이 토큰을 검증하고, 토큰이 일치하지 않으면 요청을 거부
 
-#### 3. SameSite 쿠키 속성 사용
+### ► SameSite 쿠키 속성 사용
 - SameSite 쿠키 속성 : 쿠키가 어떤 상황에서 전송되는지 제어
-- "Strict" 또는 "Lax" 설정을 사용하여, 외부 사이트에서의 요청에 대한 쿠키 전송 제한 가능.<br/>
-이는 CSRF 공격을 방어하는 데 도움이 됨
+- "Strict" 또는 "Lax" 설정을 사용하여, 외부 사이트에서의 요청에 대한 쿠키 전송 제한 가능
 
 <br>
+<br>
 
-## XSS와 CSRF의 차이
-XSS와 CSRF는 사용자의 브라우저를 대상으로 한다는 공통점이 있지만 다음과 같은 차이점이 있다.
+# 3. XSS와 CSRF의 차이
+XSS와 CSRF는 사용자의 브라우저를 대상으로 한다는 공통점이 있지만 다음과 같은 차이점이 있음
 
 |XSS|CSRF|
 |:-:|:-:|
