제출 : 33주차 이혜원

--- a/33_Promise/이혜원.md
+++ b/33_Promise/이혜원.md
@@ -1,1 +1,34 @@
-# Promise
+# 프로미스 (Promise)
+
+- 비동기 작업이 실행된 후 성공 또는 실패 후의 결과
+- 미래의 시점에 결과를 제공하겠다는 약속을 하는 것
+- 콜백 지옥을 벗어나기 위해 ES6에서 도입된 패턴
+- `Promise.all()` 을 이용하면 여러 개의 비동기 작업을 순서대로 처리할 수 있음
+
+## 프로미스의 상태
+
+|   상태    |                     설명                     |
+| :-------: | :------------------------------------------: |
+|  Pending  |    초기 상태 (resolve or reject 호출 전)     |
+| Fulfilled |            성공 (resolve 호출 시)            |
+| Rejected  |            실패 (reject 호출 시)             |
+|  Settled  | 처리가 끝난 상태 (resolve or reject 호출 후) |
+
+## 프로미스의 후속 처리 메서드
+
+|       메서드        |                         설명                          |
+| :-----------------: | :---------------------------------------------------: |
+|  `Promise.then()`   |              이전 프로미스 처리 시 실행               |
+|  `Promise.catch()`  |             이전 프로미스가 실패 시 실행              |
+| `Promise.finally()` | 이전 프로미스의 성공 실패 여부와 관련없이 무조건 실행 |
+
+- 프로미스의 후속 처리 메서드는 프로미스를 반환함
+- 공통적으로 콜백 함수는 이전 프로미스 반환값을 바탕으로 실행됨
+- `Promise.then()`의 경우 무조건 성공 시에만 사용하는 것은 아님 (두 번째 인자로 에러 처리를 할 수도 있음 -> 가독성 때문에 `catch`, `finally`를 사용하는 것이 좋음)
+- 후속 처리 메서드를 사용하여 여러 개의 프로미스를 처리할 수 있음 (프로미스 체이닝)
+
+## 참고 사이트
+
+- <https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects/Promise>
+- <https://ko.javascript.info/promise-basics>
+- <https://poiemaweb.com/es6-promise>
