제출 : 45주차 이소민

--- a/45_CDN/이소민.md
+++ b/45_CDN/이소민.md
@@ -15,11 +15,13 @@ CDN 엣지 서버의 주요 목적은 콘텐츠를 요청하는 클라이언트 
 
 ### 네트워크 엣지 
 <img src="https://www.cloudflare.com/img/learning/cdn/glossary/edge-server/cdn-edge-network-device.png" width="600">
-<img src="https://www.cloudflare.com/img/learning/cdn/glossary/edge-server/cdn-edge-server-placement.png" width="600">
+<img src="https://cf-assets.www.cloudflare.com/slt3lc6tev37/7Dy6rquZDDKSJoeS27Y6xc/4a671b7cc7894a475a94f0140981f5d9/what_is_a_cdn_distributed_server_map.png" width="600">
 
-CDN 공급자는 여러 위치에 서버를 배치하지만<br/>
-가장 중요한 것은 서로 다른 네트워크 사이의 가장자리에 있는 연결 지점. <br/>
-이러한 엣지 서버는 서로 다른 여러 네트워크와 연결되어 트래픽이 효육적으로 전달되도록 한다.
+- CDN 공급자는 여러 위치에 서버를 배치한다.
+- 이 서버의 장소들을 PoP(point of presence)라고 하며
+PoP 내부 서버를 엣지 서버라고 부른다.
+- 엣지 서버는 서로 다른 여러 네트워크와 연결되어 트래픽이 효육적으로 전달되도록 한다.
+- 엣지 서버는 PoP와 CDN 전반의 엣지 위치에 배포된다.
 
 <br/>
 
@@ -55,7 +57,8 @@ CDN 공급자는 여러 위치에 서버를 배치하지만<br/>
 ### TTL (Time To Live)
 - 엣지 서버에서 캐시된 콘텐츠가 유효한 기간
 - CDN에서는 TTL을 활용하여 엣지 서버에 캐시된 콘텐츠의 유효 기간을 조절함으로써 웹 성능을 최적화한다.
-- 짧은 TTL은 콘텐츠를 자주 갱신하고, 긴 TTL은 콘텐츠를 오랫동안 캐시하여 사용자에게 빠른 응답을 제공한다.
+- 짧은 TTL은 콘텐츠를 자주 갱신하여 최신 상태를 유지할 수 있게 하고,<br/> 
+긴 TTL은 콘텐츠를 오랫동안 캐시하여 사용자에게 빠른 응답을 제공한다.
 
 <br/>
 
@@ -63,3 +66,4 @@ CDN 공급자는 여러 위치에 서버를 배치하지만<br/>
 - https://www.ibm.com/kr-ko/topics/content-delivery-networks
 - https://www.youtube.com/watch?v=_kcoeK0ITkQ
 - https://aws.amazon.com/ko/what-is/cdn/
+- https://www.cloudflare.com/ko-kr/learning/cdn/what-is-a-cdn/
