--- a/52_HashTable/이소민.md
+++ b/52_HashTable/이소민.md
@@ -1,5 +1,5 @@
 ## 해시테이블
-<image src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7d/Hash_table_3_1_1_0_1_0_0_SP.svg/440px-Hash_table_3_1_1_0_1_0_0_SP.svg.png" width="400"><br/>
+<image src="https://velog.velcdn.com/images/miniso/post/251d1eb0-085b-45c5-a1e6-b03a16c9bfd2/image.png" width="300"><br/>
 - 키를 값에 매핑할 수 있는, 연관 배열 추가에 사용되는 자료 구조
 - 해시함수를 사용하여 변환한 값을 색인(index)으로 삼아 키(key)와 데이터(value)를 저장하는 자료구조
 - 검색하고자 하는 키값을 입력받아 해시 함수에 넣어 반환 받은 해시 코드를 배열의 인덱스로 환산해 데이터에 접근하는 자료구조
@@ -21,7 +21,7 @@
 <br/>
 
 ## 해시함수
-<image src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/58/Hash_table_4_1_1_0_0_1_0_LL.svg/480px-Hash_table_4_1_1_0_0_1_0_LL.svg.png" width="400"><br/>
+<image src="https://velog.velcdn.com/images/miniso/post/ba280c89-6da0-42a3-9cf3-2bee2d4612d5/image.png" width="300"><br/>
 - 임의의 길이의 데이터를 고정된 길이의 데이터로 매핑하는 함수
 - 큰 파일에서 중복되는 레코드를 찾을 수 있기 때문에 데이터베이스 검색이나 테이블 검색의 속도를 높일 수 있기 때문에 주로 빠른 데이터 검색을 위해 사용.
 
@@ -30,6 +30,7 @@
 ## 해시 충돌 대처
 ### - chaining
 <image src="https://velog.velcdn.com/images%2Fjangwonyoon%2Fpost%2F0f7b6f52-5149-4b77-b9d2-0e0c11ec5439%2F123.png" width="400"><br/>
+
 - John Smith와 Sandra Dee가 동일한 index 값을 받아 충돌이 발생할 경우 <br/>
 해당 index가 가르키고 있는 연결 리스트로 노드를 추가해 나가는 방식
 - 이는 제한 없이 계속해서 연결이 가능하지만 특정 버킷들은 비어있는 현상으로 메모리 문제 발생 가능함.
