수정: 빠진 부분 추가

--- a/55_Expression_Statement/임수진.md
+++ b/55_Expression_Statement/임수진.md
@@ -104,10 +104,10 @@ const num = 1 + 5;
     const 할당 = let a;
     //SyntaxError: Unexpected identifier 'a'
 
-    const num = 11;
+    const 할당 = const num = 11;
     //SyntaxError: Unexpected token 'const'
 
-    if (true) {
+    const 할당 = if (true) {
         console.log("수진이 맞음");
     }
     //SyntaxError: Unexpected token 'if'
