제출 : 57주차 이소민

--- a/57_HTTP/이소민.md
+++ b/57_HTTP/이소민.md
@@ -6,6 +6,8 @@
 - 서버에 연결되면 프로토콜, 서버 및 포트가 필요하지 않으므로 전체 URL은 포함되지 않았음
 - 상태 혹은 오류 코드도 없음
 
+<br/>
+
 ## HTTP 1.0
 - 메세지 포맷 규격화
 - HTTP 헤더 (요청, 응답 모두에서 사용 / 헤더와 바디를 빈 줄로 분리)
@@ -14,12 +16,14 @@
 - Content-Type을 통해 HTML 파일들 외 다양한 파일 전송 가능
 - redirect, 비지속 연결(non-persistent)
 
-- 요청
+<br/>
+
+### 요청
 ```
 GET /mypage.html HTTP/1.0
 User-Agent: NCSA_Mosaic/2.0 (Windows 3.1)
 ```
-- 응답
+###  응답
 ```
 200 OK
 Date: Tue, 15 Nov 1994 08:12:31 GMT
@@ -32,13 +36,14 @@ A page with an image
   <IMG SRC="/myimage.gif">
 </HTML>
 ```
+<br/>
 
-- 두번째 연결에 의한 이미지를 내려받기 위한 요청
+### 두번째 연결에 의한 이미지를 내려받기 위한 요청
 ```
 GET /myimage.gif HTTP/1.0
 User-Agent: NCSA_Mosaic/2.0 (Windows 3.1)
 ```
-- 응답
+### 응답
 ```
 200 OK
 Date: Tue, 15 Nov 1994 08:12:32 GMT
@@ -46,6 +51,8 @@ Server: CERN/3.0 libwww/2.17
 Content-Type: text/gif
 (image content)
 ```
+
+<br/>
 
 ## HTTP 1.1
 - 1.0에서 기능 향상
@@ -62,12 +69,16 @@ Content-Type: text/gif
 - 지속 커넥션을 통해 커넥션 재사용, 기존 TCP 연결을 끊지 않음으로써 재연결에 따른 TCP 느린 시작에 의한 지연 방지
 - SSL/TLS에 의한 암호화 통신 지원
 
+<br/>
+
 ## HTTP 2.0
 - SPDY 기반 (응답성 증가를 정의하고 중복 데이터 전송 문제를 해결)
 - 텍스트 프로토콜이 아닌 이진 프로토콜로 데이터 교환
 - 멀티 플렉싱 : 단일 TCP 연결에 다수의 스트림을 통해 다중 전송 처리 
 - HPACK : HTTP 메세지 내 HTTP 헤더 압축 가능, 전송된 데이터의 중복과 오버헤드 제거
 - 서버 푸시 : 클라이언트 캐시에 데이터를 저장하여 다음 요청 전에도 필요한 컨텐츠 전송 가능
+
+<br/>
 
 ## HTTP 3.0
 - 2.0의 업그레이드 버전
@@ -89,32 +100,31 @@ Content-Type: text/gif
 <hr/>
 <br/>
 
-
 ## 요청 헤더 항목
-- Host
-- From
-- Cookie
-- Referer
-- User-Agent
-- Accept <-> 엔터티 헤더 항목 중 Content-Type 과 대응
-- Accept-Charset <-> 엔터티 헤더 항목 중 Content-Type charset-xxx 과 대응
-- Accept-Encoding <-> 엔터티 헤더 항목 중 Content-Encoding 과 대응
-- Accept-Language <-> 엔터티 헤더 항목 중 Content-Language 과 대응
+- `Host`
+- `From`
+- `Cookie`
+- `Referer`
+- `User-Agent`
+- `Accept` <-> 엔터티 헤더 항목 중 `Content-Type` 과 대응
+- `Accept-Charset` <-> 엔터티 헤더 항목 중 `Content-Type charset-xxx` 과 대응
+- `Accept-Encoding` <-> 엔터티 헤더 항목 중 `Content-Encoding` 과 대응
+- `Accept-Language` <-> 엔터티 헤더 항목 중 `Content-Language` 과 대응
 
 ## 응답 헤더 항목
-- Server : 웹 서버 소프트웨어 정보
-- Set-Cookie : 웹서버 측에서 클라이언트에게 세션 쿠키 정보 설정
-- Accept-Range
-- Age
-- ETag
-- Proxy-authenticate
-- Allow : 해당 엔터티에 대해 서버측에서 지원가능한 HTTP 메소드의 리스트 나타냄
-- X-Powered-By : 서버내 시스템 이름을 알리기 위해 반환
+- `Server` : 웹 서버 소프트웨어 정보
+- `Set-Cookie` : 웹서버 측에서 클라이언트에게 세션 쿠키 정보 설정
+- `Accept-Range`
+- `Age`
+- `ETag`
+- `Proxy-authenticate`
+- `Allow` : 해당 엔터티에 대해 서버측에서 지원가능한 HTTP 메소드의 리스트 나타냄
+- `X-Powered-By` : 서버내 시스템 이름을 알리기 위해 반환
 
 ## 일반 헤더 항목
 요청 및 응답 메세지 모두에서 사용가능한 일반 목적의 헤더로 HTTP 메세지 내 바디 내용과는 관련 없음
-- Date : 메세지 생성 일시
-- Connection
+- `Date` : 메세지 생성 일시
+- `Connection`
     - `Connection: Keep-Alive` => 현 TCP 커넥션 유지 원함
         - HTTP/1.0에만 사용되던 형식
         - HTTP/1.1에서는 예전 의미를 대체로 인식하지만 해당 기능(지속 커넥션) 자체는 HTTP/1.1에서 기본 제공되므로 굳이 언급 필요 없음
@@ -127,23 +137,31 @@ Content-Type: text/gif
     - `Connection: close` => 현 커넥션 직후에 TCP 접속을 끊는다는 것을 알림
         - Keep-Alive 형식의 연결을 한 쪽에서 이를 명시적으로 끊을려고 할 때 사용
         - 또한, 오류 탐지 (Content-Length 불일치 등) 강제 종료, 타임아웃으로 연결을 끊게됨
-- Cache-Control 
-- Pragma
-- Trailer
+- `Cache-Control` 
+- `Pragma`
+- `Trailer`
 
 ## 엔터티/개체 헤더 항목
 - 요청 및 응답 메세지 모두에서 사용가능
 - 주로 바디 내용이 존재할 때 세부 정보 나타내는데 사용
-- Content-Type 관련 항목 : Content-Type, Content-Encoding, Content-Length, Content-Disposition
-- 캐시 관련 항목 : Expires, Last-Modified
-- Location : 리소스가 리다이렉트된 때에 이동된 주소, 또는 새로이 생성된 리소스 주소
+- Content-Type 관련 항목 
+    - `Content-Type`
+    - `Content-Encoding`
+    - `Content-Length`
+    - `Content-Disposition`
+- 캐시 관련 항목 
+    - `Expires`
+    - `Last-Modified`
+- `Location` : 리소스가 리다이렉트된 때에 이동된 주소, 또는 새로이 생성된 리소스 주소
     - 리다이렉션 이동되는 경우 `3xx` 상태 코드 반환
     - 새로 생성된 경우 `201 Created` 반환
     - 이에따라 선택적으로 `Location:` 헤더 항목을 보내게 됨
-- Transfer-Encoding : chuncked
+- `Transfer-Encoding : chuncked`
     - 동적으로 생성되어 바디 길이를 모르는 경우 조금씩 전송 가능
     - 각 chunk마다 그 시작에 16진수 길이를 삽입하여 chunk 길이 알려줌
 
+<br/>
+<hr/>
 
 ### 참고자료
 - https://developer.mozilla.org/ko/docs/Web/HTTP/Basics_of_HTTP/Evolution_of_HTTP
