제출 : 69주차 이소민

--- a/69_Static_Dynamic_Web/이소민.md
+++ b/69_Static_Dynamic_Web/이소민.md
@@ -1,10 +1,13 @@
 # 정적 웹 : Static Web
+> 서버에 미리 저장된 파일이 그대로 사용자에게 전송되는 방식
+
 <image src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/57/Scheme_static_page_en.svg/1000px-Scheme_static_page_en.svg.png"/>
 
 ## 특징
 - 서버에서 HTML 파일을 사전에 생성해 두고, 클라이언트의 요청에 따라 동일한 HTML 파일을 제공하는 방식
 - 모든 상황에서 모든 사용자에게 '저장된 그대로의 동일한 정보'를 표시
 - 블로그, 개인 포트폴리오 사이트 등 '변화가 자주 필요하지 않은 사이트'에서 주로 사용
+- 구축과 호스팅이 간단하고 빠른 로딩 속도를 가짐
 
 ## 상호작용성
 - 사용자 요청에 따라 콘텐츠가 변하지 않으며 고정되어 있음
@@ -15,19 +18,18 @@
 <br/>
 
 # 동적 웹 : Dynamic Web
+> 사용자 요청에 따라 서버에서 페이지 내용을 실시간으로 생성하여 제공하는 방식
+
 <image src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Scheme_dynamic_page_en.svg/2880px-Scheme_dynamic_page_en.svg.png">
 
 ## 특징
 - 사용자 요청 처리를 위해 필요한 데이터를 데이터베이스에서 가져와 동적으로 HTML을 생성하여 제공하는 방식
+- 사용자 입력, 데이터베이스 쿼리 결과 등 다양한 요소에 따라 내용 변동 가능
 - SNS, 온라인 쇼핑몰, 포털사이트, 대규모 서비스 사이트 등 사용자 맞춤형 콘텐츠와 상호작용이 필요한 사이트에서 사용
 
 ## 구성
 - 서버 측 언어(예: PHP, Python, Ruby, Node.js)와 데이터베이스(MySQL, MongoDB등)가 사용되어 사용자 요청에 따라 페이지가 동적으로 생성
 - 클라이언트 측에서는 JavaScript 같은 기술이 사용되어 사용자의 상호작용에 즉각적으로 반응
-
-## 상호작용성
-- 사용자와 상호작용이 가능
-- 사용자 입력을 받거나 데이터베이스 연동 이루어짐
 
 <br/>
 
@@ -38,7 +40,6 @@
 - 서버측 언어로 요청을 처리한 후 데이터베이스와 상호작용하여 동적으로 HTML을 생성해 사용자에게 전달
 - 데이터베이스와 연동하여 사용자 맞춤형 데이터를 제공 가능 
 - 클라이언트측에서 처리할 필요가 없어 사용자측 기기나 브라우저 성능에 영향을 덜 받음
-- 사용자 요청에 따라 실시간으로 웹페이지 생성하거나 수정
 - 모든 요청이 서버와 통신해야하므로 서버에 부하가 걸릴 수 있으며 반응 속도가 느릴 수 있음
 - 예 ) 로그인 시스템, 쇼핑카트, 게시판 등 데이터베이스와 연동이 필요한 기능을 서버측에서 처리하여 동적으로 페이지를 생성하는 경우  
 
